k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harness-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Explicitly set the IngressClass to the NGINX controller
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harness-service
                port:
                  number: 80
